implement user insert

--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -11,6 +11,10 @@
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/libs/bts/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/libs/la/css/line-awesome.min.css" />
 
+	<!-- ALERTIFY -->
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/css/alertify.min.css"/>
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/css/themes/default.min.css"/>
+
 	<!-- CSS : LOCAL -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/core.css" />
 
