--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -7,6 +7,8 @@
 	<script type="text/javascript" src="{{ script }}"></script>
 {% endfor  %}
 
+	<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/alertify.min.js"></script>
+
 <!-- <section class="footer">
 	<div class="container-fluid ">
 		<div class="row">
