--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -11,7 +11,7 @@
 
                 {{ template.topmenu|raw }}
 
-                <div class="stuadd">
+                <div class="container stuadd">
 
                     <form name="admission" method="POST" action="#">
                         <div id="accordionAdmission">
