fixed layout issue

--- a/themes/default/staff/search.html
+++ b/themes/default/staff/search.html
@@ -52,7 +52,7 @@
                                     </div>
 
                                     <div class="col-4">
-                                        <div class="form-group col-md-4">
+                                        <div class="form-group">
                                             <label for="nic">NIC</label>
                                             <input type="text" class="form-control" id="nic" required/>
                                         </div>
