--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -152,7 +152,7 @@
                 <!-- START : HEALTH MENU -->
                 <li class="main-menu">
                     <div class="col-md-9"><a href="{{ app.url }}"><i class="la la-heartbeat"></i><span>&nbsp;Health Record</span></a></div>
-                    <div class="col-md-3" data-toggle="collapse" data-target="#result"><i class="la la-angle-down"></i></div>
+                    <div class="col-md-3" data-toggle="collapse" data-target="#health"><i class="la la-angle-down"></i></div>
                 </li>
 
                     <ul class="collapse" id="health">
@@ -224,6 +224,10 @@
                         
                     </ul>
                 <!-- END : USER MENU -->
+
+                <li class="main-menu" id="school">
+                    <div class="col-md-9"><a href="{{ app.url }}/school"><i class="la la-institution"></i><span>&nbsp;School</span></a></div>
+                </li>
 
                 <li class="main-menu" id="backup">
                     <div class="col-md-9"><a href="{{ app.url }}"><i class="la la-cloud-upload"></i><span>&nbsp;Backup</span></a></div>
