half way done for staff add function

--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -8,6 +8,7 @@
 {% endfor  %}
 
 	<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/alertify.min.js"></script>
+	<script src="//unpkg.com/multiple-select@1.4.0/dist/multiple-select.js"></script>
 
 <!-- <section class="footer">
 	<div class="container-fluid ">
