--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -14,6 +14,7 @@
 	<!-- ALERTIFY -->
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/css/alertify.min.css"/>
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/css/themes/default.min.css"/>
+	<link rel="stylesheet" href="//unpkg.com/multiple-select@1.4.0/dist/multiple-select.css" />
 
 	<!-- CSS : LOCAL -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/core.css" />
