--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -7,8 +7,10 @@
 	<script type="text/javascript" src="{{ script }}"></script>
 {% endfor  %}
 
-	<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/alertify.min.js"></script>
-	<script src="//unpkg.com/multiple-select@1.4.0/dist/multiple-select.js"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/moment.min.js"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/tempusdominus-bootstrap-4.min.js"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/alertify.min.js"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/multiple-select.js"></script>
 
 <!-- <section class="footer">
 	<div class="container-fluid ">
