--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -11,10 +11,13 @@
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/libs/bts/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/libs/la/css/line-awesome.min.css" />
 
+	<!-- TEMPUS DOMINUS DATETIME PICKER -->
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/tempusdominus-bootstrap-4.min.css" />
+
 	<!-- ALERTIFY -->
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/css/alertify.min.css"/>
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.4/build/css/themes/default.min.css"/>
-	<link rel="stylesheet" href="//unpkg.com/multiple-select@1.4.0/dist/multiple-select.css" />
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.min.css"/>
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.default.min.css"/>
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/multiple-select.css" />
 
 	<!-- CSS : LOCAL -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/core.css" />
