--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -133,7 +133,7 @@
                 <!-- START : SPORT MENU -->
                 <li class="main-menu">
                     <div class="col-md-9"><a href="{{ app.url }}/sport"><i class="la la-futbol-o"></i><span>&nbsp;Sport</span></a></div>
-                    <div class="col-md-3" data-toggle="collapse" data-target="#result"><i class="la la-angle-down"></i></div>
+                    <div class="col-md-3" data-toggle="collapse" data-target="#sport"><i class="la la-angle-down"></i></div>
                 </li>
 
                     <ul class="collapse" id="sport">
