--- a/themes/default/student/index.html
+++ b/themes/default/student/index.html
@@ -13,7 +13,7 @@
 
                 <div class="stuindex">
 
-                    <h4 class="page-title">Dashboard</h4>
+                    <h4 class="page-title"> Student Overview </h4>
                     <div class="row mt-5">
                         
                         <div class="col-md-2">
