--- a/themes/default/staff/add.html
+++ b/themes/default/staff/add.html
@@ -26,11 +26,16 @@
                                     <div class="card-body">
 
                                         <div class="form-row">
-                                            <div class="col-4">
+
+                                            <div class="col-md-4">
                                                 <div class="form-group">
                                                     <label for="admission_date">Admission Date</label>
-                                                    <input type="date" class="form-control" id="admission_date" required />
-                                                    <small id="adddateHelp" class="form-text text-muted">If unchanged todate will be submitted</small>
+                                                    <div class="input-group date" id="datetimepicker_admission_date" data-target-input="nearest">
+                                                        <input id="admission_date" class="form-control datetimepicker-input" data-target="#datetimepicker_admission_date" required />
+                                                        <div class="input-group-append" data-target="#datetimepicker_admission_date" data-toggle="datetimepicker">
+                                                            <div class="input-group-text"><i class="la la-calendar"></i></div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
     
@@ -53,7 +58,7 @@
                                                 <div class="form-group">
                                                     <label for="category">Category</label>
                                                     <select class="form-control" id="category_id" required>
-                                                        <option selected`>- Select -</option>
+                                                        <option selected disabled>- Select Category -</option>
                                                         {% for category in staff_category %}
                                                         <option value="{{ category.id }}">{{ category.name }}</option>
                                                         {% endfor %}
@@ -66,7 +71,7 @@
                                                 <div class="form-group">
                                                     <label for="type">Type</label>
                                                     <select class="form-control" id="type_id" required>
-                                                        <option selected>- Select -</option>
+                                                        <option selected disabled>- Select Type -</option>
                                                         {% for type in staff_type %}
                                                         <option value="{{ type.id }}">{{ type.name }}</option>
                                                         {% endfor %}
@@ -79,9 +84,9 @@
                                                 <div class="form-group">
                                                     <label for="class">Class in Charge</label>
                                                     <select class="form-control" id="class_id">
-                                                        <option selected>- Select -</option>
-                                                        {% for class in class %}
-                                                        <option value="{{ class.id }}">{{ class.name }}</option>
+                                                        <option selected disabled>- Select CIG -</option>
+                                                        {% for class in staff_class %}
+                                                        <option value="{{ class.id }}">{{ class.grade.name}} - {{ class.name }}</option>
                                                         {% endfor %}
                                                     </select>
                                                     <!-- <small id="addclass" class="form-text text-muted">New Class</small> -->
@@ -91,7 +96,10 @@
                                             <div class="col-12">
                                                 <div class="form-group">
                                                     <label for="subject_ids">Subjects</label>
-                                                    <select class="form-control" id="subject_ids" required></select>
+                                                    <select class="form-control" id="subject_ids" required>
+                                                        <option selected disabled> - Select Subjects - </option>
+                                                        <option value="0"> Chemistry (රසායන විද්‍යාව) </option>
+                                                    </select>
                                                     <!-- <small id="addsubject" class="form-text text-muted">New Subject</small> -->
                                                 </div>
                                             </div>
@@ -150,8 +158,8 @@
                                                 <div class="form-group">
                                                     <label for="rel_id">Religion</label>
                                                     <select class="form-control" id="rel_id">
-                                                        <option selected>- Select -</option>
-                                                        {% for religion in religion %}
+                                                        <option selected disabled> - Select Religion - </option>
+                                                        {% for religion in staff_religion %}
                                                         <option value="{{ religion.id }}">{{ religion.name }}</option>
                                                         {% endfor %}
                                                     </select>
@@ -162,7 +170,7 @@
                                                 <div class="form-group">
                                                     <label for="gen">Gender</label>
                                                     <select class="form-control" id="gen" required>
-                                                        <option selected>- Select -</option>
+                                                        <option selected disabled> - Select Gender - </option>
                                                         <option value="Male">Male</option>
                                                         <option value="Female">Female</option>
                                                     </select>
@@ -208,8 +216,8 @@
                                                 <div class="form-group">
                                                     <label for="dist">District</label>
                                                     <select class="form-control" id="dist" required>
-                                                        <option selected>- Select -</option>
-                                                        {% for district in district %}
+                                                        <option selected disabled> - Select District - </option>
+                                                        {% for district in staff_district %}
                                                         <option value="{{ district.id }}">{{ district.name }}</option>
                                                         {% endfor %}
                                                     </select>
@@ -231,7 +239,7 @@
                             </div>
                         </div>
 
-                        <button type="button" onClick="register();" class="btn btn-primary"> Register </button>
+                        <button type="button" class="btn btn-primary" onClick="register();"> Register </button>
                         <button type="reset" class="btn btn-secondary"> Clear </button>
                         
                     </form>
@@ -244,10 +252,13 @@
     {{ template.footer|raw }}
 
     <script>
+
         register = () => {
 
             // PAYLOAD
-            var formData = new FormData
+            var formData = new FormData;
+
+            // FORM DATA
             formData.append('admission_date', $("#admission_date").val())
             formData.append('employee_no', $("#employee_no").val())
             formData.append('nic_no', $("#nic_no").val())
@@ -269,6 +280,7 @@
             formData.append('district', $("#district").val())
             formData.append('province', $("#province").val())
 
+            // CONSOLE LOG
             console.log("ADMISSION DATE : " + $("#admission_date").val())
             console.log("EMPLOYEE NO : " + $("#employee_no").val())
             console.log("NIC NO : " + $("#nic_no").val())
@@ -342,6 +354,14 @@
 
         })
 
+        // DATE TIME PICKER
+        $("#datetimepicker_admission_date").datetimepicker({
+            format: 'YYYY-MM-DD',
+            icons: {
+                up: 'la la-angle-up',
+                down: 'la la-angle-down'
+            }
+        })
     </script>
 
 </body>
